--- a/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
+++ b/app/code/Codazon/OneStepCheckout/view/frontend/web/template/shipping.html
@@ -86,7 +86,7 @@
         color: #333333;
     }
     #opc-sidebar .product-image-container {
-        width: 90px !important; 
+        width: 90px !important;
         height: 90px !important;
     }
     .minicart-items .product-item-details .details-qty .label {
@@ -168,6 +168,7 @@
         font-size: 14px;
         line-height: 16px;
         color: #666666;
+        display: block;
     }
     #opc-sidebar > div.opc-block-summary > table > tbody > tr.totals.shipping.excl > th > span.label {
         display: none;
@@ -229,7 +230,7 @@
     #checkout_agreements_block {
         margin-top: 4px;
         margin-bottom: 20px;
-    }   
+    }
     #checkout_agreements_block .actions-toolbar {
         width: 100% !important;
     }
@@ -263,11 +264,11 @@
         }
         #checkout .payment-option-content, #checkout .checkout-agreements-block {
             padding: 0 16px;
-        }   
+        }
         .osc #opc-sidebar .opc-block-summary {
             padding: 0 16px;
         }
-        
+
     }
 </style>
 
