--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
@@ -252,7 +252,9 @@
 			top:-50px;
 			.abs-borderradius(0);
 			&:after{
-				content:'\f00d';
+                content: '\e929';
+                font-family: 'icomoon';
+                font-size: 24px;
 				-moz-transform: rotate(0);
 				-o-transform: rotate(0);
 				transform: rotate(0);
@@ -262,7 +264,9 @@
 			float:none;
 			line-height:50px;
 			margin:0;
-			content:'\f291';
+            content: '\e913';
+            font-family: 'icomoon';
+            font-size: 24px;
 		}
 		span{
 			display:none;
