--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
@@ -2,113 +2,121 @@
     .cdz-login-form-dropdown {
         padding: 24px 20px 40px 20px;
     }
+
     .custom-sytle-loginmini-title {
         font-style: normal;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 150%;
-    color: #333333;
-    margin-bottom: 24px;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 150%;
+        color: #333333;
+        margin-bottom: 24px;
     }
+
     .custom-style-loginmini-signin {
-            padding: 11px !important;
-            border: none !important;
-        }
-        .block-customer-login .account-social-login .actions-toolbar.social-btn {
-    width: 100%;
-}
-.block-customer-login .login .secondary {
-    text-align: left;
-    display: block;
+        padding: 11px !important;
+        border: none !important;
+    }
 
-    margin: 0;
-    margin-bottom: 24px;
-}
-.block-customer-login .login .secondary  .remind span {
-    color: #1979c3;
-}
-.custom-style-loginmini-infotext {
-    font-style: normal;
-    font-weight: normal !important;
-    font-size: 14px;
-    line-height: 16px;
-    color: #333333;
-    margin-bottom: 8px !important;
-}
-.custom-style-loginmini-or {
-    display: flex;
-    justify-content: space-around;
-}
-.custom-style-loginmini-or-2 {
-    position: relative;
-    top: -8px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: #333333;
-}
-.custom-style-loginmini-or-1, .custom-style-loginmini-or-3 {
-    width: 160px;
-    border-top: 1px solid #E2E2E2;
-}
-.custom-style-loginmini-create {
-    padding-top: 24px;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    color: #333333;
-    border-top: 1px solid #e2e2e2;
-}
-.custom-style-loginmini-create-a {
-    color: #10477d !important;
-}
-#cdz-login-form-dropdown > div > div > div.block.social-login-authentication-channel.account-social-login {
-    margin-bottom: 24px !important;
-}
-.custom-style-loginmini-form {
-    margin-bottom: 24px;
-}
+    .block-customer-login .account-social-login .actions-toolbar.social-btn {
+        width: 100%;
+    }
+
+    .block-customer-login .login .secondary {
+        text-align: left;
+        display: block;
+
+        margin: 0;
+        margin-bottom: 24px;
+    }
+
+    .block-customer-login .login .secondary .remind span {
+        color: #1979c3;
+    }
+
+    .custom-style-loginmini-infotext {
+        font-style: normal;
+        font-weight: normal !important;
+        font-size: 14px;
+        line-height: 16px;
+        color: #333333;
+        margin-bottom: 8px !important;
+    }
+
+    .custom-style-loginmini-or {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .custom-style-loginmini-or-2 {
+        position: relative;
+        top: -8px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        color: #333333;
+    }
+
+    .custom-style-loginmini-or-1, .custom-style-loginmini-or-3 {
+        width: 160px;
+        border-top: 1px solid #E2E2E2;
+    }
+
+    .custom-style-loginmini-create {
+        padding-top: 24px;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        color: #333333;
+        border-top: 1px solid #e2e2e2;
+    }
+
+    .custom-style-loginmini-create-a {
+        color: #10477d !important;
+    }
+
+    #cdz-login-form-dropdown > div > div > div.block.social-login-authentication-channel.account-social-login {
+        margin-bottom: 24px !important;
+    }
+
+    .custom-style-loginmini-form {
+        margin-bottom: 24px;
+    }
 
 
+    .block-customer-login .social-btn .btn-social {
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        color: #333333;
+        background: none;
+        text-align: center;
+        border: 1px solid #e1e1e1;
+        padding-top: 11px;
+        padding-bottom: 11px;
+    }
 
+    .custom-style-mini-google, .custom-style-mini-facebook {
+        border-right: none !important;
+    }
 
+    .custom-style-mini-google {
+        left: 48px !important;
+    }
 
+    .custom-style-mini-facebook {
+        left: 41px !important;
+    }
 
-
-
-
-
-        .block-customer-login .social-btn .btn-social {
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: #333333;
-    background: none;
-    text-align: center;
-    border: 1px solid #e1e1e1;
-    padding-top: 11px;
-    padding-bottom: 11px;
-}
-
-        .custom-style-mini-google, .custom-style-mini-facebook {
-            border-right: none !important;
-        }
-        .custom-style-mini-google {
-            left: 48px !important;
-        }
-        .custom-style-mini-facebook {
-            left: 41px !important;
-        }
-        .custom-style-mini-facebook:before {
-    font-family: 'icomoon';
-    content: "\e935";
-    color: #155DA4;
-}
+    .custom-style-mini-facebook:before {
+        font-family: 'icomoon';
+        content: "\e935";
+        color: #155DA4;
+    }
 </style>
 
 <?php
@@ -131,7 +139,7 @@
 ?>
 <div class="block block-customer-login">
     <div class="block-content" >
-        <div class="custom-sytle-loginmini-title">Sign In</div>   
+        <div class="custom-sytle-loginmini-title">Sign In</div>
         <form class="form form-login custom-style-loginmini-form"
               action="<?php /* @escapeNotVerified */ echo $block->getPostActionUrl() ?>"
               method="post"
@@ -156,7 +164,7 @@
                 <?php echo $block->getChildHtml('form_additional_info'); ?>
                 <div class="actions-toolbar">
                     <div class="">
-                    <button type="submit" class="action login primary  custom-style-loginmini-signin" name="send"><span><?php /* @escapeNotVerified */ echo __('Sign In') ?></span></button></div>  
+                    <button type="submit" class="action login primary  custom-style-loginmini-signin" name="send"><span><?php /* @escapeNotVerified */ echo __('Sign In') ?></span></button></div>
                 </div>
             </fieldset>
         </form>
@@ -168,7 +176,7 @@
         <?php echo $block->getChildHtml('form_additional_social_login'); ?>
         <div class="custom-style-loginmini-create">
              <span>New to Waterdrop?</span>
-             <a class="custom-style-loginmini-create-a" href="#"> <span >Create an Account</span> &nbsp&nbsp></a>
+             <a class="custom-style-loginmini-create-a" href="<?php echo $block->getUrl('customer/account/create'); ?>"> <span >Create an Account</span> &nbsp&nbsp></a>
         </div>
     </div>
 </div>
