--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Theme/templates/html/copyright.phtml
@@ -10,13 +10,10 @@
 	</span>
     <div class="footer-siteinfo">
         <span class="footer-span" style="margin-right: 12px;">
-            <a style="color: #ffffff;" href="#">Privacy Policy</a>
+            <a style="color: #ffffff;" href="/privacy-policy-cookie-restriction-mode">Privacy Policy</a>
         </span>
         <span class="footer-span" style="margin-right: 12px;">
             <a style="color: #ffffff;" href="#">Terms of Service</a>
-        </span>
-        <span>
-            <a style="color: #ffffff;" href="#">Sitemap</a>
         </span>
     </div>
 </small>
