--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_homestore.less
@@ -1000,11 +1000,25 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 #back-top a{
 	background:#155DA4 !important;
 	border-color:#155DA4 !important;
+    border-radius: 4px;
+    padding: 10px;
 	&:hover{
-		background:#ffffff !important;
-		color:#155DA4 !important;
+		background:#155DA4 !important;
+		color:#ffffff !important;
 		border-color:#155DA4 !important;
 	}
+    &:before{
+        display: inline-block;
+        font-family: 'icomoon';
+        font-style: normal;
+        font-weight: normal;
+        line-height: 1;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        content: '\e916';
+        font-size: 16px;
+        color: #fff;
+    }
 }
 //Category
 .products-grid .product-item-info{
