add subscribe & change style.

--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_AjaxCartPro/web/css/source/_module.less
@@ -120,6 +120,8 @@
 					top: 23px;
 					right: 0;
 					z-index: 3;
+                    margin-bottom: 0;
+                    padding: 10px 12px;
 				}
 			}
 			.product.actions {
@@ -274,6 +276,15 @@
 	}
 	.cart-items{
 		width:100%;
+        .item {
+            .hover-sec {
+                .details-qty {
+                    button {
+                        padding: 7px 12px;
+                    }
+                }
+            }
+        }
 	}
 	.footer-cart-additional{
 		clear:both; width:100%;
