--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Checkout/web/css/source/module/_minicart.less
@@ -147,6 +147,7 @@
 			.lib-css(padding, 20px @minicart__padding-horizontal 0);
             right: 0;
             width: 340px;
+            border-radius: 4px;
 			position: absolute;
 			top: 100%;
 			z-index:5;
