--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Customer/templates/form/login.mini.phtml
@@ -81,6 +81,11 @@
         margin-bottom: 24px !important;
     }
 
+    #cdz-login-form-dropdown {
+        border: none;
+        border-radius: 4px;
+    }
+
     .custom-style-loginmini-form {
         margin-bottom: 24px;
     }
