--- a/app/design/frontend/Codazon/fastest/fashion/Magento_Newsletter/templates/popup_subscribe.phtml
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_Newsletter/templates/popup_subscribe.phtml
@@ -20,7 +20,7 @@
                 <label class="label" for="newsletter"><span><?php /* @escapeNotVerified */ echo __('Sign Up for Our Newsletter:') ?></span></label>
                 <div class="control">
                     <input name="email" type="email" id="popup-newsletter"
-                                placeholder="<?php /* @escapeNotVerified */ echo __('Enter your email address') ?>"
+                                placeholder="<?php /* @escapeNotVerified */ echo __('Enter email address') ?>"
                                 data-validate="{required:true, 'validate-email':true}"/>
                 </div>
             </div>
