--- a/lib/web/mage/gallery/gallery.less
+++ b/lib/web/mage/gallery/gallery.less
@@ -221,7 +221,7 @@
 }
 
 .fotorama__thumb {
-    background-color: @color-gray92;
+    background-color: #ffffff;
     height: 100%;
     overflow: hidden;
     position: relative;
