change brand style & scroll bar style.

--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_layout.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_layout.less
@@ -137,11 +137,21 @@
         .sidebar-main {
             .filter-title {
                 height: 40px;
-                border-radius: 4px 4px 0 0;
+                border-radius: 4px 4px 0 0 !important;
             }
             .filter-content {
                 border: none;
-                border-radius: 0 0 4px 4px;
+                border-radius: 0 0 4px 4px !important;
+            }
+            .block-brands {
+                .block-title {
+                    height: 40px;
+                    border-radius: 4px 4px 0 0 !important;
+                }
+                .block-content {
+                    border: none;
+                    border-radius: 0 0 4px 4px !important;
+                }
             }
         }
         .sidebar-additional {
@@ -153,11 +163,11 @@
             .block-brands {
                 .block-title {
                     height: 40px;
-                    border-radius: 4px 4px 0 0;
+                    border-radius: 4px 4px 0 0 !important;
                 }
                 .block-content {
                     border: none;
-                    border-radius: 0 0 4px 4px;
+                    border-radius: 0 0 4px 4px !important;
                 }
             }
         }
