--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -168,6 +168,7 @@
 //Scrollbar
 
 .float-bar{
+    display: none;
 	position: fixed;
 	.abs-transition();
     //right: 20px;
@@ -196,7 +197,7 @@
 			.abs-link(@main_text, @main_text);
 			span{
                 display:block;
-                padding: 8px;
+                padding: 24px;
                 height: 48px;
             }
 			.fa{
@@ -1090,7 +1091,7 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
 	background:#ffffff !important;
 	border-color:#ffffff !important;
     color:#333333 !important;
-    padding: 6px;
+    padding: 8px;
     border: none;
 	&:hover{
 		//background:#ffffff !important;
