--- a/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_module.less
+++ b/app/code/Codazon/Shopbybrandpro/view/frontend/web/css/source/_module.less
@@ -320,13 +320,13 @@
 			margin-bottom: 20px;
 			.brand-cover{
 				width: 100%;
-                display: none;
 			}
 			.cover-wrap {
 				line-height: 0;
 			}
 			.after-cover{
 				.thumb-section{
+                    display: none;
 					min-height: 45px;
 					position: relative;
 					.brand-img-wrap {
@@ -346,7 +346,11 @@
 					margin: 7px 0 0px 15px;
 					display: inline-block;
 					font-size: 22px;
+                    min-height: 38px;
 				}
+                .social-section {
+                    width: 100% !important;
+                }
 			}
 		}
 		.social-section {
@@ -524,6 +528,7 @@
 }
 @media  (max-width: 768px) {
     .brand-container{
+        margin-bottom: 0;
         .brand-top{
             .block.featured-brands-block{
                 margin-bottom: 20px;
@@ -531,6 +536,9 @@
                     display: none;
                 }
             }
+        }
+        .cover-section {
+            margin-bottom: 0;
         }
     }
 }
