--- a/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/web/css/source/layout/_slider.less
@@ -235,5 +235,6 @@
 .media-width(@extremum, @break) when (@extremum = 'max') and (@break = @screen__m) {
 	.columns .column.main{
 		max-width: 100%;
+        padding-bottom: 8px;
 	 }
 }
