--- a/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Codazon_ThemeOptions/web/css/source/_module.less
@@ -319,7 +319,7 @@
         backface-visibility: hidden;
         max-height: 80%;
         width: 500px;
-        max-width: calc(100% - 40px);
+        max-width: calc(~'100% - 40px');
         margin: 2rem auto;
         .cdz-popup-inner {
             position: relative;
