--- a/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_CatalogSearch/web/css/source/_module.less
@@ -379,7 +379,7 @@
 		}
 	}
 }
-.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+@media (min-width: 1025px) {
 	 .sticky-menu:not(.active){
 		.block-search{
 			position: relative;
