--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/_navigation.less
@@ -88,6 +88,210 @@
 }
 
 //
+//  Tablets
+//  _____________________________________________
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .nav-sections-item-first {
+        border-top: 8px solid #F4F4F4;
+        padding-top: 12px;
+    }
+    .nav-sections-item-last {
+        padding-bottom: 17px;
+    }
+
+    .nav-open {
+        .page-wrapper {
+            left: calc(~"100% - @{active-nav-indent}");
+        }
+        .rtl-layout{
+            .page-wrapper {
+                left:auto;
+                right: calc(~"100% - @{active-nav-indent}");
+            }
+            .nav-sections {
+                right:0;
+                left:auto;
+            }
+        }
+        .nav-sections {
+            @_shadow: 100px 0 0 0 rgba(17, 17, 17, .8);
+
+            .lib-css(box-shadow, @_shadow, 1);
+            left: 0;
+            z-index: 99;
+            background: #ffffff;
+            opacity: 1;
+            /*&:after{
+                background: #fff;
+                opacity:0.5;
+                content: '';
+                display: block;
+                height: 100%;
+                position: fixed;
+                right:0;
+                top: 0;
+                width: 100%;
+                z-index: 1;
+            }*/
+        }
+
+        //.nav-toggle {
+        //    &:after{
+        //        background: rgba(0,0,0,.01);
+        //        content: '';
+        //        display: block;
+        //        height: 100%;
+        //        position: fixed;
+        //        right:0;
+        //        top: 0;
+        //        width: 100%;
+        //        z-index: 1;
+        //    }
+        //}
+    }
+
+    .nav-toggle {
+        left: 18px;
+        top: 20px;
+        width:20px;
+        height:16px;
+
+        &:before{
+            top: 7px;
+            width:20px;
+        }
+
+        span{
+            &:after,  &:before{
+                width:20px;
+            }
+        }
+    }
+
+    .nav-sections {
+        .lib-css(transition, left .3s, 1);
+        height: 100%;
+        left: calc(~"-1 * (100% - @{active-nav-indent})");
+        overflow: auto;
+        position: fixed;
+        top: 0;
+        width: calc(~"100% - @{active-nav-indent}");
+        background: #ffffff;
+        opacity: 0;
+        .rtl-layout &{
+            left:auto;
+            right: calc(~"-1 * (100% - @{active-nav-indent})");
+            .lib-css(transition, right .3s, 1);
+        }
+        .authorization-link{
+            .log-in.link{
+                display:block !important;
+            }
+            .switcher-options{display:none!important;}
+        }
+        div.switcher {
+            margin:0;
+            .switcher-options{
+                width: 100%;
+                &.active ul.dropdown,
+                ul.dropdown{
+                    position: static !important;
+                }
+            }
+            .label {
+                display: block;
+                margin-bottom: @indent__xs;
+            }
+            &:last-child {
+                //border-bottom: 1px solid darken(@header_top_background,10%);
+            }
+            &-trigger {
+                border-bottom: 1px solid #424242;
+                .abs-csscf(#ffffff, @menu_font);
+                margin: 0;
+                padding: 10px 20px !important;
+                width: 100%;
+                .rtl-layout &{
+                    padding: 10px 20px !important;
+                }
+                strong {
+                    font-size: 14px;
+                    display: inline-block !important;
+                    position: relative;
+                    text-transform: capitalize;
+                    .lib-icon-font(
+                        @_icon-font-content: @icon-down,
+                        @_icon-font-size: 42px,
+                        @_icon-font-position: after,
+                        @_icon-font-display: block
+                    );
+                    &:after {
+                        position: absolute;
+                        right: -40px;
+                        top: -18px;
+                        display:none;
+                    }
+                }
+                &:after {
+                    float: right;
+                    font-size: 14px !important;
+                    .rtl-layout &{
+                        float: left;
+                    }
+                }
+                &.active strong {
+                    .lib-icon-font-symbol(
+                        @_icon-font-content: @icon-up,
+                        @_icon-font-position: after
+                    );
+                }
+            }
+            &-dropdown {
+                .lib-list-reset-styles();
+                padding: @indent__s 0;
+
+            }
+        }
+
+        .header.links {
+            .lib-list-reset-styles();
+            //border: 1px solid #424242;
+            li {
+                display:block;
+                margin: 0;
+                &.greet.welcome {
+                    border: 1px solid #424242;
+                    font-weight: 700;
+                    padding: .8rem @indent__base;
+                }
+                > a {
+                    border-bottom: 1px solid #424242;
+                    .abs-csscf(#ffffff, @menu_font);
+                }
+            }
+            a{
+                .abs-link(#ffffff, #ffffff);
+            }
+            a,
+            a:hover {
+                //.lib-css(color, @navigation-level0-item__color);
+                //.lib-css(text-decoration, @navigation-level0-item__text-decoration);
+                display: block;
+                //font-weight: 700;
+                //padding: .8rem @indent__base;
+                padding: 10px 20px;
+                .lib-css(font, @menu_font);
+            }
+            .header.links {
+                border: 0;
+            }
+        }
+    }
+
+}
+
+//
 //  Mobile
 //  _____________________________________________
 
@@ -474,10 +678,12 @@
 //  Desktop
 //  _____________________________________________
 
-.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
+@media (min-width: 1025px) {
     .nav-toggle {
         display: none;
     }
+}
+.media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
 	.navigation ul{padding:0;}
     .nav-sections {
         .lib-vendor-prefix-flex-shrink(0);
