pad homepage & product collection style change.

--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_homestore.less
@@ -1687,10 +1687,14 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
                 margin-right: 0;
                 margin-bottom: 10px !important;
                 padding-right: 10px;
-                height: 50px;
+                height: 110px;
+                width: 100% !important;
             }
             .abs-img img {
-                top: -25px !important;
+                top: -54px !important;
+            }
+            .shop-by-brand-list {
+                flex-flow: column;
             }
         }
     }
@@ -1726,10 +1730,14 @@ body.rtl-layout .sidebar .product-style13 .product-items .product-item-info .pro
                 margin-right: 0;
                 margin-bottom: 10px !important;
                 padding-right: 10px;
-                height: 33px;
+                height: 80px;
+                width: 100% !important;
             }
             .abs-img img {
-                top: -18px !important;
+                top: -38px !important;
+            }
+            .shop-by-brand-list {
+                flex-flow: column;
             }
         }
     }
