--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_slider.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_slider.less
@@ -246,6 +246,13 @@
 
 	}
 	.block.related .owl-carousel .owl-nav{ top:-90px;}
+
+    .brand-slider-wrapper {
+        .owl-carousel .owl-stage {
+            display: flex;
+            flex-flow: column;
+        }
+    }
 }
 
 
