--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_wrapper-product.less
@@ -105,28 +105,6 @@
                 opacity: 1;
                 .abs-transition();
             }
-
-			&:hover{
-				.cdz-product-bottom:not(.non-hover){
-					//.abs-scale(~'1, 1');
-                    opacity: 1;
-                    transform: translateY(-25px);
-					.cdz-buttons-container{
-						.qs-button{
-							transform: translate(0, 0);
-						}
-						button.tocart.primary{
-							transform: translate(0, 0);
-						}
-					}
-				}
-                .product-reviews-summary, .price-box {
-                    //.abs-scale(~'0, 0');
-                    opacity: 0;
-                    transform: translateY(-25px);
-                    .abs-transition();
-                }
-			}
 		}
 	}
 
@@ -702,7 +680,33 @@
 
 }
 }
-
+@media (min-width: 1025px) {
+    .products-grid {
+        .product-item .product-item-info {
+            &:hover{
+                .cdz-product-bottom:not(.non-hover){
+                    //.abs-scale(~'1, 1');
+                    opacity: 1;
+                    transform: translateY(-25px);
+                    .cdz-buttons-container{
+                        .qs-button{
+                            transform: translate(0, 0);
+                        }
+                        button.tocart.primary{
+                            transform: translate(0, 0);
+                        }
+                    }
+                }
+                .product-reviews-summary, .price-box {
+                    //.abs-scale(~'0, 0');
+                    opacity: 0;
+                    transform: translateY(-25px);
+                    .abs-transition();
+                }
+            }
+        }
+    }
+}
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__l) {
 	.product-style05{
 		//show product item
